--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VPN/Proxy Detection</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Authentication Page</title>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-firestore.js"></script>
+    <!-- Link to your main.js file -->
+    <script src="main.js" defer></script>
 </head>
 <body>
-    <div id="content">
-    </div>
-
-    <div id="vpn-warning" class="hidden">
-        <h2>Please turn off your VPN/Proxy</h2>
-    </div>
-
-    <script src="main.js"></script>
+    <h1>Authentication Page</h1>
 </body>
 </html>
