--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Auth Verification</title>
     <!-- Firebase App (the core Firebase SDK) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="main.js" defer></script>
 </head>
 <body>
-    <h1>Verification Page</h1>
+    <h1>Auth Verification</h1>
+    <p>Please wait while we verify your token...</p>
 </body>
 </html>
